# xash3d-ffi

./: .gitmodules  Cargo.toml  README.md  generate.sh  wrapper-client.h  wrapper-common.h  wrapper-fs-api.h  wrapper-menu.h  wrapper-net-api.h  wrapper-player-move.h  wrapper-render-api.h  wrapper-studio-api.h  wrapper-types.h  wrapper.h
.github/workflows/: ci.yaml  release.yaml
include/: wrapper-client.h  wrapper-common.h  wrapper-efx-api.h  wrapper-event-api.h  wrapper-keys.h  wrapper-phys-api.h  wrapper-player-move.h  wrapper-render.h  wrapper-server.h  wrapper-tri-api.h
src/: api.rs  client.rs  common.rs  ffi.rs  lib.rs  macros.rs  menu.rs  player_move.rs  render.rs  server.rs  vec.rs
src/common/: vec.rs
