[package]
name = "xash3d-ffi"
description = "Raw FFI bindings to Xash3D FWGS engine"
keywords = ["ffi", "bindings"]
version = "0.1.0"
license = "MIT"
rust-version = "1.64"
edition = "2021"
authors = ["Denis Drakhnia <numas13@gmail.com>"]

[features]
default = ["all"]
std = []
libm = ["dep:libm"]

# shared apis
studio-api = []
render-api = []
net-api = []
fs-api = []
tri-api = []
event-api = []

# dlls
all = ["client", "server", "menu", "render"]
player-move = []
client = [
    "player-move",
    "studio-api",
    "render-api",
    "net-api",
    "tri-api",
    "event-api",
]
server = [
    "player-move",
]
menu = [
    "net-api",
]
render = [
    "studio-api",
    "render-api",
    "fs-api",
    "tri-api",
]

[dependencies]
libc = { version = "0.2", default-features = false }
libm = { version = "0.2", optional = true }
